# cockpit-agent-evaluation-platform

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260407_0001_initial_schema.py  20260408_0002_execution_task_dispatch_fields.py  20260413_0002_workbench_asset_lifecycle.py
apps/api/: main.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  styles.dashboard.css
apps/web/src/api/: client.ts  (+2 more)
docs/runbooks/: local-dev.md
docs/superpowers/specs/: 2026-04-13-evaluation-workbench-frontend-redesign-zh.md
runners/agent_runner/: main.py
scripts/: smoke_local.py
src/agent_eval_platform/: config.py  db.py  orchestration_ids.py
src/agent_eval_platform/adapters/: base.py  cli.py  http.py  native_test.py  python_sdk.py
tests/: conftest.py
tests/analysis/: test_baseline_regression.py  test_normalize.py  test_trends_alerts.py
tests/api/: test_catalog_api.py  test_dashboard_api.py  test_imports_api.py  test_reports_api.py  test_runs_api.py  test_workbench_api.py
tests/e2e/: test_platform_smoke.py
tests/execution/: test_cli_adapter.py  test_direct_executor.py  test_http_adapter.py  test_native_test_adapter.py  test_python_sdk_adapter.py  test_queue.py
tests/persistence/: test_schema_bootstrap.py
tests/runner/: test_runner_protocol.py
tests/smoke/: test_bootstrap.py
tests/workers/: test_executor_worker.py
workers/analyzer/: main.py
workers/executor/: main.py
workers/notifier/: main.py
(+80 files in other folders)
