[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evaluation-platform"
version = "0.1.0"
description = "Independent agent evaluation platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
